--- a/src/app/profile/password-form/password-form.component.html
+++ b/src/app/profile/password-form/password-form.component.html
@@ -1,28 +1,33 @@
 
-<form *ngIf="passwordForm" [formGroup]="passwordForm" class="app-form" fxLayout="column">
-  <span class="mb-1">Endre passord</span>
-  <mat-form-field>
-      <input matInput placeholder="Nåværende passord"  type="password" formControlName="oldPassword">
-  </mat-form-field>
 
-  <mat-form-field>
-    <input matInput placeholder="Nytt passord"  type="password" formControlName="password">
-    <mat-error *ngIf="this.password.invalid">
-      Passord må være på minst 7 tegn.
-    </mat-error>
-  </mat-form-field>
+<mat-card class="app-card">
+  <mat-card-header class="mb-2">Endre passord</mat-card-header>
 
-  <mat-form-field>
-    <input matInput placeholder="Gjenta nytt passord"  type="password" formControlName="confirmPassword">
-  </mat-form-field>
-  <mat-error *ngIf="this.error">
-    {{ this.error }}
-  </mat-error>
-  <br />
-
-  <app-submit-button
-    [disabled]="passwordForm.invalid"
-    (click)="onSubmit()"
-  ></app-submit-button>
-
-</form>
+  <mat-card-content>
+    <form *ngIf="passwordForm" [formGroup]="passwordForm" fxLayout="column">
+      <mat-form-field>
+          <input matInput placeholder="Nåværende passord"  type="password" formControlName="oldPassword">
+      </mat-form-field>
+    
+      <mat-form-field>
+        <input matInput placeholder="Nytt passord"  type="password" formControlName="password">
+        <mat-error *ngIf="this.password.invalid">
+          Passord må være på minst 7 tegn.
+        </mat-error>
+      </mat-form-field>
+    
+      <mat-form-field>
+        <input matInput placeholder="Gjenta nytt passord"  type="password" formControlName="confirmPassword">
+      </mat-form-field>
+      <mat-error *ngIf="this.error">
+        {{ this.error }}
+      </mat-error>
+      <br />
+    
+      <app-submit-button
+        [disabled]="passwordForm.invalid"
+        (click)="onSubmit()">
+      </app-submit-button>
+    </form>
+  </mat-card-content>
+</mat-card>
