--- a/src/app/mission/components/mission-report-form/mission-report-form.component.html
+++ b/src/app/mission/components/mission-report-form/mission-report-form.component.html
@@ -1,25 +1,24 @@
-
-
-  <form *ngIf="reportForm" [formGroup]="reportForm" class="form-container" fxLayout="column" fxLayoutAlign="space-around-center">
-    <h5 class="text-center">Legg til rapport</h5>
-
-    <mat-form-field formGroupName="reportType">
-      <input matInput placeholder="Type rapport" aria-label="Type rapport" formControlName="name" [matAutocomplete]="auto">
-      <mat-autocomplete #auto="matAutocomplete">
-        <mat-option *ngFor="let type of types" [value]="type.name">
-          {{type.name}}
-        </mat-option>
-      </mat-autocomplete>
-    </mat-form-field>
-
-    <input (change)="changeFile($event)" type="file">
-    <br />
-    <app-submit-button
-      icon="cloud_upload"
-      [disabled]="reportForm.invalid || reportForm.pristine || !this.files"
-      (click)="onSubmit()">
-    </app-submit-button>
-  </form>
-
-
+<div class="app-card m-2">
+    <mat-card-header class="mb-2">Legg til rapport</mat-card-header>
+    <mat-card-content>
+      <form *ngIf="reportForm" [formGroup]="reportForm" fxLayout="column" fxLayoutAlign="space-around-center">
+        <mat-form-field formGroupName="reportType">
+          <input matInput placeholder="Type rapport" aria-label="Type rapport" formControlName="name" [matAutocomplete]="auto">
+          <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let type of types" [value]="type.name">
+              {{type.name}}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+    
+        <input (change)="changeFile($event)" type="file">
+        <br />
+        <app-submit-button
+          icon="cloud_upload"
+          [disabled]="reportForm.invalid || reportForm.pristine || !this.files"
+          (click)="onSubmit()">
+        </app-submit-button>
+      </form>
+    </mat-card-content>
+ </div>
 
