--- a/src/app/timesheet/timesheet-form/timesheet-form.component.html
+++ b/src/app/timesheet/timesheet-form/timesheet-form.component.html
@@ -1,35 +1,38 @@
-<div class="form-container" fxLayout="column" fxLayoutAlign="start stretch">
-  <span class="content-header mb-1">Legg til timer</span>
 
-  <mat-form-field>
-    <input [disabled]="missionDisabled ? '' : null" matInput placeholder="Oppdrag" aria-label="Velg oppdrag" [matAutocomplete]="auto1" [(ngModel)]="mission">
-    <mat-autocomplete #auto1="matAutocomplete" [displayWith]="displayFn">
-      <mat-option *ngFor="let mission of missions | async" [value]="mission">
-        {{ mission.address }}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
 
-  <div fxLayout="row" fxLayoutAlign="space-between center" >
-
-    <label fxFlex=46>
-      <mat-form-field class="w-100">
-          <input [disabled]="dateDisabled ? '' : null" matInput placeholder="Dato" aria-label="Velg dato" [owlDateTimeTrigger]="d3" [owlDateTime]="d3" [(ngModel)]="date" >
+<div class="app-card m-2">
+  <mat-card-header class="mb-2">Legg til timer</mat-card-header>
+  <mat-card-content>
+    <div fxLayout="column" fxLayoutAlign="start stretch">
+      <mat-form-field>
+        <input [disabled]="missionDisabled ? '' : null" matInput placeholder="Oppdrag" aria-label="Velg oppdrag" [matAutocomplete]="auto1" [(ngModel)]="mission">
+        <mat-autocomplete #auto1="matAutocomplete" [displayWith]="displayFn">
+          <mat-option *ngFor="let mission of missions | async" [value]="mission">
+            {{ mission.address }}
+          </mat-option>
+        </mat-autocomplete>
       </mat-form-field>
-      <owl-date-time [pickerMode]="'dialog'" [pickerType]="'calendar'" #d3></owl-date-time>
-    </label>
-
-    <label fxFlex=46>
-      <mat-form-field class="w-100">
-        <input matInput  placeholder="Arbeidstid" selectMode="range" [owlDateTimeTrigger]="t1" [owlDateTime]="t1" [(ngModel)]="timeRange">
-      </mat-form-field>
-      <owl-date-time [pickerMode]="'dialog'" [pickerType]="'timer'" stepMinute="15" [startAt]="initTime" #t1></owl-date-time>
-    </label>
-  </div>
-
-
-
-  <app-submit-button text="Legg til"
-    (click)="onSubmit()">
-  </app-submit-button>
+    
+      <div fxLayout="row" fxLayoutAlign="space-between center" >
+    
+        <label fxFlex=46>
+          <mat-form-field class="w-100">
+              <input [disabled]="dateDisabled ? '' : null" matInput placeholder="Dato" aria-label="Velg dato" [owlDateTimeTrigger]="d3" [owlDateTime]="d3" [(ngModel)]="date" >
+          </mat-form-field>
+          <owl-date-time [pickerMode]="'dialog'" [pickerType]="'calendar'" #d3></owl-date-time>
+        </label>
+    
+        <label fxFlex=46>
+          <mat-form-field class="w-100">
+            <input matInput  placeholder="Arbeidstid" selectMode="range" [owlDateTimeTrigger]="t1" [owlDateTime]="t1" [(ngModel)]="timeRange">
+          </mat-form-field>
+          <owl-date-time [pickerMode]="'dialog'" [pickerType]="'timer'" stepMinute="15" [startAt]="initTime" #t1></owl-date-time>
+        </label>
+      </div>
+    
+      <app-submit-button text="Legg til"
+        (click)="onSubmit()">
+      </app-submit-button>
+    </div>
+  </mat-card-content>
 </div>
