--- a/src/app/timesheet/timesheet-week-list/timesheet-week-menu/timesheet-week-menu.component.scss
+++ b/src/app/timesheet/timesheet-week-list/timesheet-week-menu/timesheet-week-menu.component.scss
@@ -1,41 +1,26 @@
 @import '../../../../variables';
 
-.week-field {
-  width: 22px;
+.week-field { width: 22px; }
+.year-field { width: 36px; }
+
+.field{
   margin-top:14px;
-  .mat-form-field-underline{
-    display:none;
-  }
-
-  .mat-form-field-wrapper{
-    margin-bottom: -1.25em!important;
-  }
-  .mat-form-field-infix{
-    border-top: 0.3375em solid transparent!important;
-  }
-  .mat-form-field-label{
-    top:26px!important;
-  }
-
-}
-
-.year-field {
-  width: 36px;
-  margin-top:14px;
-  margin-left:$content-margin*2px;
-  margin-right:$content-margin*2px;
-  .mat-form-field-underline{
-    display:none;
-  }
-
-  .mat-form-field-wrapper{
-    margin-bottom: -1.25em!important;
-  }
-  .mat-form-field-infix{
-    border-top: 0.3375em solid transparent!important;
-  }
-  .mat-form-field-label{
-    top:26px!important;
+  margin-left:$content-margin*1px;
+  margin-right:$content-margin*1px;
+  ::ng-deep {
+    .mat-form-field-underline{
+      display:none;
+    }
+    .mat-form-field-wrapper{
+      margin-bottom: -1.25em!important;
+    }
+    .mat-form-field-infix{
+      border-top: 0.3375em solid transparent!important;
+    }
+    .mat-form-field-label{
+      top:26px!important;
+      color:$background-color;
+    }
   }
 }
 
@@ -49,18 +34,4 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance:textfield;
-}
-
-.confirmed-box{
-  width:$content-margin*2px;
-  height:$content-margin*2px;
-  background:$primary;
-  border-radius:100%;
-}
-
-.unconfirmed-box{
-  width:$content-margin*2px;
-  height:$content-margin*2px;
-  background:$warn;
-  border-radius:100%;
 }
