--- a/src/app/shared/components/image-viewer-dialog/image-viewer-dialog.component.html
+++ b/src/app/shared/components/image-viewer-dialog/image-viewer-dialog.component.html
@@ -4,7 +4,7 @@
 <mat-toolbar #imageToolBar class="image_toolbar color-accent" fxLayout="row" fxLayoutAlign="space-between center"
 [@showHideToolbar]="toolbarHidden ? 'hide' : 'show'">
     <button mat-icon-button aria-label="Lukk" (click)="onNoClick()">
-        <mat-icon class="icon_150">chevron_left</mat-icon>
+        <mat-icon class="scale-150">chevron_left</mat-icon>
     </button>
     <button mat-icon-button (click)="openBottomSheet()"><mat-icon>more_vert</mat-icon></button>
 </mat-toolbar>
