--- a/src/app/shared/components/nav-list-item/nav-list-item.component.html
+++ b/src/app/shared/components/nav-list-item/nav-list-item.component.html
@@ -5,7 +5,7 @@
     <span *ngIf="config.mainLine" mat-line>{{ config.mainLine }}</span>
 
     <p mat-line *ngFor="let subLine of config.subLines">
-      <mat-icon class="icon_75">{{subLine.icon}}</mat-icon>
+      <mat-icon class="scale-75">{{subLine.icon}}</mat-icon>
       {{subLine.name}}
     </p>
 
