--- a/src/app/timesheet/timesheet-list/timesheet-list.component.html
+++ b/src/app/timesheet/timesheet-list/timesheet-list.component.html
@@ -9,7 +9,7 @@
 
             <button mat-mini-fab aria-label="ny" class="action_fab"
                 (click)="openTimesheetForm(getCurrentFilter().mission)">
-                <mat-icon class="icon_125">add</mat-icon>
+                <mat-icon class="scale-125">add</mat-icon>
             </button>
         </ng-container>
 
