--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
           <mat-divider class="mid-divider"></mat-divider>
         </mat-list-item>
 
-        <mat-list-item [routerLink]="['/timer']">
+        <mat-list-item [routerLink]="['/timer', currentYear, 'ukeliste']">
           <mat-icon mat-list-icon>timer</mat-icon>
           <span mat-line>Timeliste</span>
           <mat-icon>chevron_right</mat-icon>
