--- a/src/app/shared/layout/main-nav/main-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-nav.component.html
@@ -1,18 +1,18 @@
-<mat-sidenav-container ngClass.xs="toolbar-padding">
+<mat-sidenav-container>
 
   <mat-sidenav fixedInViewport #drawer class="mat-elevation-z4" 
     [attr.role]="(isXs$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isXs$ | async) ? 'over' : 'side'"
     [opened]="(isXs$ | async) === false">
 
-    <mat-toolbar fxLayout="column" fxLayoutAlign="center start" style="line-height:1.3">
+    <mat-toolbar fxLayout="column" fxLayoutAlign="center start" >
 
-      <span
+      <span class="mat-small"
         [ngClass]="(conSub$ | async) ? 'color-success' : 'color-warn'">
         {{ (conSub$ | async) ? 'Tilkoblet internett' : 'Frakoblet internett' }}
       </span>
 
-      <span *ngIf="currentUser$ | async; let user">{{ user.firstName }} {{ user.lastName }}</span>
+      <span class="mat-body"  *ngIf="currentUser$ | async; let user">{{ user.firstName }} {{ user.lastName }}</span>
 
     </mat-toolbar>
     
@@ -31,7 +31,7 @@
 
       <mat-divider class="mid-divider"></mat-divider>
 
-      <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/timer']" [routerLinkActive]="['active']">
+      <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/timer', currentYear, 'ukeliste']" [routerLinkActive]="['active']">
         <mat-icon mat-list-icon>timer</mat-icon>
         <p mat-line>Timeliste</p>
       </a>
@@ -73,7 +73,7 @@
 
   </mat-sidenav>
 
-  <mat-sidenav-content *ngIf="config$ | async; let config">
+  <mat-sidenav-content *ngIf="config$ | async; let config" ngClass.xs="bottom-toolbar-padding">
 
     <mat-toolbar class="mat-elevation-z4" 
       [ngClass]="{'alt_nav': config.altNav, 'main_nav': !config.altNav, 'mat-elevation-z4': config.elevationEnabled}">
@@ -95,11 +95,13 @@
           <ng-template #backBtn>
             <button (click)="handleFn(config.backFn)"
              mat-icon-button aria-label="Tilbake">
-                <mat-icon class="icon_150">chevron_left</mat-icon>
+                <mat-icon class="scale-150">chevron_left</mat-icon>
             </button>
           </ng-template>
-
-          <span class="main-nav-title" [routerLink]="['/hjem']">{{ config.title }}</span>
+          <span class="mr-auto">
+            <span class="ml-1" [routerLink]="['/hjem']">{{ config.title }}</span>
+            <span class="ml-1 mat-caption" >{{ config.subTitle }}</span>
+          </span>
         </ng-container>
 
         <ng-template #altNav>
@@ -107,7 +109,7 @@
 
             <button (click)="handleFn(config.backFn)"
              mat-icon-button aria-label="Tilbake">
-                <mat-icon class="icon_150">chevron_left</mat-icon>
+                <mat-icon class="scale-150">chevron_left</mat-icon>
             </button>
 
             <ng-container *ngIf="config.subTitle || config.subIcon">
@@ -121,9 +123,9 @@
         <mat-spinner *ngIf="loading$ |  async" diameter="24"></mat-spinner>
 
 
-        <button mat-icon-button aria-label="Åpne timeliste" 
-          *ngFor="let button of config.buttons" 
-          [color]="button.color || 'white'"
+        <button mat-icon-button 
+          *ngFor="let button of config.buttons" attr.aria-label="{{ button.aria || 'Knapp' }}" 
+          [ngClass]="button.colorClass || 'color-foreground'"
           (click)="handleFn(button.callback)">
             <mat-icon>{{ button.icon }}</mat-icon>
         </button>
@@ -149,7 +151,8 @@
 
     </mat-toolbar>
 
-    <div class="main_content" [ngClass]="config.altNav ? 'main_content_height_alt' : 'main_content_height_main'">
+    <div class="main_content"
+      [ngClass]="config.altNav ? 'main_content_height_alt' : 'main_content_height_main'">
       <router-outlet></router-outlet>
     </div>
 
@@ -157,4 +160,4 @@
 
 </mat-sidenav-container>
 
-<app-bottom-nav fxHide fxShow.xs [openTimesheetCount]="openTimesheetCount$ | async"></app-bottom-nav>
+<app-bottom-nav fxHide fxShow.xs [openTimesheetCount]="openTimesheetCount$ | async" [year]="currentYear"></app-bottom-nav>
