add comment property & week card + performance opts

--- a/src/app/shared/components/timesheet-filter/timesheet-filter.component.html
+++ b/src/app/shared/components/timesheet-filter/timesheet-filter.component.html
@@ -93,10 +93,10 @@
       <mat-radio-group [(ngModel)]="filterPreset.status"  
         fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
         <mat-radio-button [value]="timesheetStatus.Open" color="warn">
-            Ubekreftet
+            Åpen
         </mat-radio-button>
         <mat-radio-button [value]="timesheetStatus.Confirmed">
-            Bekreftet
+            Låst
         </mat-radio-button>
       </mat-radio-group>
 
