--- a/src/app/timesheet/timesheet-week-list/timesheet-week-list.component.html
+++ b/src/app/timesheet/timesheet-week-list/timesheet-week-list.component.html
@@ -1,12 +1,9 @@
-
-<div class="p-0">
-
-    <app-list-card *ngFor="let week of weeks"
-        startIcon="home_work"
-        endIcon="chevron_right"
-        [text]="'Uke ' + week"
-        [routerLink]="['/timer', this.year, week, 'ukevisning']">
-    </app-list-card>
-
+<div class="p-0 h-100" fxLayout="column" fxLayoutAlign="start stretch">
+    <cdk-virtual-scroll-viewport itemSize="82" [attr.minBufferPx]="11*82" [attr.maxBufferPx]="13*82" fxFlex>
+        <app-timesheet-week-card
+            *cdkVirtualFor="let summary of weekSummaries$ | async"
+            [summary]="summary"
+            [routerLink]="['/timer', this.year, summary.week, 'ukevisning']">
+        </app-timesheet-week-card>    
+    </cdk-virtual-scroll-viewport>
 </div>
-
