--- a/src/app/timesheet/components/timesheet-card/timesheet-card.component.html
+++ b/src/app/timesheet/components/timesheet-card/timesheet-card.component.html
@@ -1,38 +1,42 @@
 <div fxLayout="column" fxLayoutAlign="space-between start" class="timesheet-card bg-foreground"
-  *ngIf="timesheet"
-  [ngClass]="{'pt-0': timesheet.status == 0}">
+  *ngIf="timesheet">
 
-  <button mat-button class="p-0" *ngIf="timesheet.status == 0" (click)="confirmTimesheet()"> 
-      <span class="color-warn">Ubekreftet!</span>
-      Trykk for å bekrefte
-  </button>
+  <span fxLayout="row" fxLayoutAlign="space-between stretch" class="w-100" *ngIf="timesheet">
 
-  <span fxLayout="row" fxLayoutAlign="space-between center" class="w-100" *ngIf="timesheet">
-
-    <span fxLayout="column" fxLayoutAlign="start start" >
-
-      <span class="mat-body-2">
+    <span fxLayout="column" fxLayoutAlign="start start">
+      <span class="mat-body-2 p-0">
         {{ this.timesheet.startTime | date : 'longDate'}}
         {{ this.timesheet.startTime | date : 'shortTime' }} - {{ this.timesheet.endTime | date : 'shortTime' }}
       </span>
       <span class="mat-small">
         {{ this.timesheet.startTime | duration : this.timesheet.endTime }}
       </span>
-      <span class="mat-small" *ngIf="timesheet.mission">
-        {{ timesheet.mission.address }}
+      <span class="mat-small">
+        {{ timesheet.mission?.address }}
+      </span>
+      <span class="mat-body-2">
+        {{ timesheet.comment }}
       </span>
 
     </span>
-    <mat-icon class="mb-auto color-success"
-      *ngIf="timesheet.status !== 0">
-      check
-    </mat-icon>
 
-    <button mat-icon-button color="warn" style="margin-top:auto"
-      *ngIf="timesheet.status === 0" (click)="deleteTimesheet()">
-      <mat-icon>delete_forever</mat-icon>
-    </button>
+    <span *ngIf="timesheet.status === 0" class="color-warn text-center" fxLayout="column" fxLayoutAlign="space-between center">
+      <span>
+        <mat-icon>lock_open</mat-icon>
+        <span class="mat-caption" style="position:relative;top:-8px">åpen</span>
+      </span>
+
+      <button mat-icon-button (click)="deleteTimesheet()">
+        <mat-icon>delete_forever</mat-icon>
+      </button> 
+    </span>
+
+    <span *ngIf="timesheet.status === 2" class="color-success text-center">
+      <mat-icon>lock</mat-icon>
+      <span class="mat-caption" style="position:relative;top:-8px">låst</span>
+    </span>
 
   </span>
+
 
 </div>
