--- a/src/app/timesheet/timesheet-form/timesheet-form.component.html
+++ b/src/app/timesheet/timesheet-form/timesheet-form.component.html
@@ -5,7 +5,8 @@
   <mat-card-content>
     <div fxLayout="column" fxLayoutAlign="start stretch">
       <mat-form-field>
-        <input [disabled]="missionDisabled ? '' : null" matInput placeholder="Oppdrag" aria-label="Velg oppdrag" [matAutocomplete]="auto1" [(ngModel)]="mission">
+        <input matInput placeholder="Oppdrag" aria-label="Velg oppdrag"
+          [disabled]="missionDisabled ? '' : null" [matAutocomplete]="auto1" [(ngModel)]="mission">
         <mat-autocomplete #auto1="matAutocomplete" [displayWith]="displayFn">
           <mat-option *ngFor="let mission of missions | async" [value]="mission">
             {{ mission.address }}
@@ -13,23 +14,26 @@
         </mat-autocomplete>
       </mat-form-field>
     
-      <div fxLayout="row" fxLayoutAlign="space-between center" >
-    
+      <span fxLayout="row" fxLayoutAlign="space-between start">
         <label fxFlex=46>
           <mat-form-field class="w-100">
-              <input [disabled]="dateDisabled ? '' : null" matInput placeholder="Dato" aria-label="Velg dato" [owlDateTimeTrigger]="d3" [owlDateTime]="d3" [(ngModel)]="date" >
+              <input matInput placeholder="Dato" aria-label="Velg dato" required
+                [disabled]="dateDisabled ? '' : null" [owlDateTimeTrigger]="d3" [owlDateTime]="d3" [(ngModel)]="date" >
           </mat-form-field>
           <owl-date-time [pickerMode]="'dialog'" [pickerType]="'calendar'" #d3></owl-date-time>
         </label>
     
         <label fxFlex=46>
           <mat-form-field class="w-100">
-            <input matInput  placeholder="Arbeidstid" selectMode="range" [owlDateTimeTrigger]="t1" [owlDateTime]="t1" [(ngModel)]="timeRange">
+            <input matInput  placeholder="Arbeidstid" required selectMode="range" [owlDateTimeTrigger]="t1" [owlDateTime]="t1" [(ngModel)]="timeRange">
           </mat-form-field>
           <owl-date-time [pickerMode]="'dialog'" [pickerType]="'timer'" stepMinute="15" [startAt]="initTime" #t1></owl-date-time>
         </label>
-      </div>
-    
+      </span>
+
+      <mat-form-field>
+        <textarea matInput placeholder="Kommentar" aria-label="Kommentar" required [(ngModel)]="comment" maxlength="400"></textarea>
+      </mat-form-field>
       <app-submit-button text="Legg til"
         (click)="onSubmit()">
       </app-submit-button>
